# TeruAIBOT

./: .replit  main.py  pyproject.toml  replit.md
bot/teru/: ai.py  config.py  emojis.py  memory.py  teru.py  tools.py  views.py
bot/teru/data/: style.json
