[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "discord-ext-voice-recv>=0.5.2a179",
    "discord-py>=2.7.1",
    "mistralai>=1.0.0",
    "openai>=2.32.0",
    "pynacl>=1.5.0",
    "python-dotenv>=1.2.2",
    "tlgbotfwk>=0.4.61",
]
